--- a/resource/css/home-admin.css
+++ b/resource/css/home-admin.css
@@ -554,6 +554,139 @@ footer,p,.fa-copyright{
   white-space: nowrap;
 }
 
+/* CSS for approval-details */
+.approved-btn {
+  background-color: white;
+  color: #F55197;
+  border: #F55197 1px solid;
+  padding: 10px 30px;
+  border-radius: 15px;
+  font-weight: bold;
+  box-shadow: -4px 4px 4px 0px #00000040;
+  transition: all 0.3s ease;
+}
+
+.approved-btn:hover,
+.approved-btn:active {
+  background-color: white;
+  color: #F55197;
+  border: #F55197 1px solid;
+  transform: translateY(-2px);
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
+}
+
+.status-btn {
+  background-color: #f0f8ff;
+  color: #F55197;
+  border: 1px;
+  padding: 10px 30px;
+  border-radius: 15px;
+  font-weight: bold;
+  box-shadow: -4px 4px 4px 0px #00000040;
+  transition: all 0.3s ease;
+}
+
+.status-btn:hover,
+.status-btn:active {
+  background-color: #F55197;
+  color: #fff;
+  transform: translateY(-2px);
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
+}
+
+/* CSS FOR REMARKS SECTION */
+.remarks-container {
+  position: relative;
+}
+
+textarea.form-control {
+  padding-bottom: 50px;
+}
+
+.edit-remarks-btn {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  background-color: #f0f8ff;
+  color: #F55197;
+  border: none;
+  padding: 8px 20px;
+  border-radius: 15px;
+  font-weight: bold;
+  box-shadow: -2px 2px 4px rgba(0, 0, 0, 0.2);
+  transition: all 0.3s ease;
+}
+
+.edit-remarks-btn:hover {
+  background-color: #F55197;
+  color: #fff;
+}
+
+
+/* CSS FOR CHANGE PASSWORD */
+.change-pass-card {
+  background-color: #E3E3E3;
+  padding: 30px;
+  border-radius: 10px;
+  margin-bottom: 20px;
+  position: relative;
+
+}
+
+.text-password {
+  color: #F55197;
+  font-weight: bold;
+}
+
+.btn-update-password {
+  background-color: #f0f8ff;
+  color: #F55197;
+  border: 1px;
+  padding: 10px 30px;
+  border-radius: 15px;
+  font-weight: bold;
+  box-shadow: -4px 4px 4px 0px #00000040;
+  transition: all 0.3s ease;
+}
+
+
+.btn-update-password:hover,
+.btn-update-password:active {
+  background-color: #F55197;
+  color: #fff;
+  transform: translateY(-2px);
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
+}
+
+.password-toggle-icon {
+  position: absolute;
+  top: 70%;
+  right: 15px;
+  transform: translateY(-50%);
+  cursor: pointer;
+  color: #888;
+}
+
+.form-control:focus {
+  border-color: #161542;
+  box-shadow: 0 0 0 0.25rem rgba(22, 21, 66, 0.25);
+}
+
+.back-arrow {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  font-size: 1.2rem;
+  color: #161542;
+  text-decoration: none;
+  transition: transform 0.2s ease;
+}
+
+.back-arrow:hover {
+  color: #161542;
+  transform: scale(1.1);
+}
+
 
 @media (max-width: 768px) {
 /* .request-card {
