--- a/resource/css/help.css
+++ b/resource/css/help.css
@@ -30,21 +30,32 @@ textarea.form-control {
     margin-bottom: 8px;
 }
 
+/* .btn-div{
+    background-color: #c1e2ff;
+    width: fit-content;
+    border-radius: 8px;
+    margin: 0 auto;
+} */
+
 .btn-contact {
-    background-color: #F55197;
-    color: white;
+    background: linear-gradient(90deg, #6FA9FF 0%, #8D5CCB 100%);
+    border:none;
+    box-shadow: -4px 4px 4px 0px #00000040;
     padding: 12px 30px;
     border: none;
     border-radius: 8px;
     font-weight: bold;
-    transition: all 0.3s ease;
+    transition: all 0.5s ease;
     font-family: 'Montserrat', sans-serif;
+    color: white;
 }
 
 .btn-contact:hover {
-    background-color: #e04384;
+    background: linear-gradient(90deg, #8D5CCB 0%, #6FA9FF 100%);
     transform: translateY(-2px);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    box-shadow: -4px 4px 4px 0px #00000040;
+    transition: all 0.5s ease;
+    color: white;
 }
 
 .contact-info {
