--- a/resource/css/home-admin.css
+++ b/resource/css/home-admin.css
@@ -552,6 +552,7 @@ footer,p,.fa-copyright{
   box-shadow: -2px 2px 4px rgba(0, 0, 0, 0.2);
   transition: background-color 0.3s, color 0.3s;
   white-space: nowrap;
+  text-decoration: none;
 }
 
 /* CSS for approval-details */
